Main service changes